--- a/resources/optionlist.css
+++ b/resources/optionlist.css
@@ -19,8 +19,9 @@
 	font: bolder 18px helvetica, sans-serif;
 	background: rgba(240, 240, 240, 0.95);
 	border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+	position: -webkit-sticky;
 	position: sticky;
-	top: 0;
+	top: -1px;
 	z-index: 1;
 }
 
